Fixed line break in columns of pet creation form

--- a/src/styles/forms.sass
+++ b/src/styles/forms.sass
@@ -123,7 +123,7 @@
     flex-direction: row
     margin: 0
     gap: 0.9375rem
-    width: 50%
+    width: calc(50% - (0.9375rem / 2))
     .p-field:first-child
       width: 40%
     .p-field:last-child
